<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/darkGreen_color"
        android:id="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageCrossChangePassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/ic_close_black_24px"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Change_password"
                android:textColor="@color/absolute_white_color"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/imageCrossChangePassword"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp" />

            <ImageView
                android:id="@+id/imageConfirmNewPassword"
                android:alpha="0.7"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ic_confirm_changes"/>
        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_change_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp51"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16">

        <EditText
            android:id="@+id/change_oldPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/your_password"/>
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_change_newPassword1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp51"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16">

        <EditText
            android:id="@+id/change_newPassword1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/New_password"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_change_newPassword2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp51"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16">

        <EditText
            android:id="@+id/change_newPassword2"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Confirm_new_pass"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/darkGreen_color"
        android:layout_marginLeft="@dimen/dp16"
        android:text="@string/Forgot_your_password"/>

</LinearLayout>