<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.gnyblecraft.marcul.ideasproject.Registry.SignUpViewModel"/>
    </data>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/signupName"
            android:inputType="textPersonName"
            android:layout_width="328dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Name"
            android:text="@={viewModel.name}"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3" />


        <EditText
            android:id="@+id/signupSurname"
            android:inputType="textPersonName"
            android:layout_width="328dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Surname"
            android:text="@={viewModel.surname}"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupName" />


        <EditText
            android:id="@+id/signupEmail"
            android:inputType="textEmailAddress"
            android:layout_width="328dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Email"
            android:text="@={viewModel.email}"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupSurname" />


        <EditText
            android:id="@+id/signupPhone"
            android:inputType="phone"
            android:layout_width="328dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Phone"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupEmail" />


        <EditText
            android:id="@+id/signupPassword"
            android:inputType="textPassword"
            android:layout_width="328dp"
            android:layout_height="34dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Password"
            android:text="@={viewModel.password}"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupPhone" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/darkGreen_color"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <ImageView
            android:id="@+id/imageCrossSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_close_black_24px"
            app:layout_constraintTop_toTopOf="@+id/toolbar3"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/toolbar3"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/toolbar3"
            app:layout_constraintHorizontal_bias="0.05"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{()->viewModel.onCrossClick()}"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_up"
            android:textSize="12sp"
            android:textColor="@color/almostWhite_textcolor"
            app:layout_constraintLeft_toRightOf="@+id/imageCrossSignup"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintVertical_bias="0.565"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:text="@string/Sign_up"
            android:textSize="12sp"
            android:textColor="@color/almostWhite_textcolor"
            android:background="@color/darkGreen_color"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signupPassword"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{()->viewModel.onSignUpClick()}"/>

        <TextView
            android:id="@+id/textViewPolisy"
            android:layout_width="328dp"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="By signing up, ..."
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpButton"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize="12sp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPolisy"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/FBSignUpButton"
            android:layout_width="328dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/FBcolor"
            android:textColor="@color/almostWhite_textcolor"
            android:text="Facebook Sign up"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Already_have_an_account"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textViewLogIn" />

        <TextView
            android:id="@+id/textViewLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/Log_in"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView5"
            android:onClick="@{()->viewModel.onLogInClick()}"/>

    </android.support.constraint.ConstraintLayout>
</layout>
